--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "next": "^13.4.2",
@@ -34,6 +35,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
