--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.4",
     "next": "^13.4.2",
     "next-auth": "^4.22.4",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
