--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.19",
     "@mantine/ds": "^6.0.19",
     "@mantine/form": "^6.0.19",
+    "@mui/material": "^5.14.8",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.3.1",
