tons of admin stuff

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "react-spotify-embed": "^2.0.3",
     "remark-gfm": "^3.0.1",
     "superjson": "^1.13.1",
     "zod": "^3.21.4"
